# twitter-DDD

./: .env  Dockerfile  README.md  alembic.ini  deploy_backend.sh  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  server_setup.sh
alembic/: env.py
alembic/versions/: add_auth_fields.py
my_twitter/: .env  alembic.ini  config.py  dependencies.py  main.py
my_twitter/alembic/: env.py
my_twitter/alembic/versions/: 4b9d34a1eb2d_added_account_table.py
my_twitter/core/database/postgres/: database.py
my_twitter/core/error/: base_exception.py  like_exception.py  media_exception.py  tweet_exception.py  user_exception.py
my_twitter/core/models/postgres/: models.py
my_twitter/core/repositories/: base_repository.py
my_twitter/core/services/: base_query_service.py
my_twitter/core/unit_of_work/: unit_of_work.py
my_twitter/core/use_case/: use_case.py
my_twitter/features/: __init__.py
my_twitter/features/auth/: dependencies.py
my_twitter/features/like/: __init__.py  dependencies.py
my_twitter/features/like/data/: __init__.py
my_twitter/features/like/data/models/: __init__.py  (+1 more)
my_twitter/features/like/domain/: __init__.py
my_twitter/features/like/presentation/: __init__.py
my_twitter/features/media/: __init__.py  dependencies.py
my_twitter/features/media/data/: __init__.py
my_twitter/features/media/domain/: __init__.py
my_twitter/features/tweet/: __init__.py  dependencies.py
my_twitter/features/tweet/data/: __init__.py
my_twitter/features/user/: __init__.py  dependencies.py
my_twitter/features/user/data/: __init__.py
(+76 files in other folders)
